--- a/config/bucketNotificationConfig.json
+++ b/config/bucketNotificationConfig.json
@@ -50,6 +50,23 @@
           ]
         }
       }
+    },
+    {
+      "LambdaFunctionArn": "{{fwisProcessArn}}",
+      "Events": ["s3:ObjectCreated:*"],
+      "Filter": {
+        "Key": {
+          "FilterRules": [
+            {
+              "Name": "prefix",
+              "Value": "fwfidata/ENT_7005/fwis"
+            }, {
+              "Name": "suffix",
+              "Value": ".XML"
+            }
+          ]
+        }
+      }
     }
   ]
 }
