--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
+  "configurations": [      
     {
          "type": "node",
          "request": "launch",
@@ -45,6 +45,14 @@
            "--path",
            "./test/events/stationEvent.json"
        ]
+   }, {
+       "type": "node",
+       "request": "launch",
+       "name": "debug unit tests",
+       "program": "/home/tedd/.nvm/versions/node/v8.11.1/bin/lab",
+        "args": [
+            "test/unit"
+        ]
    }
   ]
 }
