--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
              "invoke",
              "local",
              "-f",
-             "process",
+             "ffoiProcess",
              "--path",
              "./test/events/ffoiEvent.json"
          ]
@@ -53,6 +53,19 @@
         "args": [
             "test/unit"
         ]
-   }
+   }, {
+        "type": "node",
+        "request": "launch",
+        "name": "run fwisProcess function",
+        "program": "/home/tedd/.nvm/versions/node/v8.11.1/bin/sls",
+        "args": [
+            "invoke",
+            "local",
+            "-f",
+            "fwisProcess",
+            "--path",
+            "./test/events/fwisEvent.json"
+        ]
+    }
   ]
 }
