--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aws-sdk": "2.238.1",
     "csvtojson": "^2.0.4",
     "joi": "^13.6.0",
+    "moment": "^2.22.2",
     "pg": "^7.4.3",
     "proxy-agent": "3.0.0",
     "serverless": "^1.30.3",
