--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "deploy": "sls deploy -v --force",
     "integration-test": "lab test/integration -v -r console -o stdout -r html -o test/output-integration.html -m 30000",
     "lint": "standard",
-    "unit-test": "lab test/unit -v -c --coverage-exclude lib/helpers -r console -o stdout -r html -o test/output-unit.html -m 5000",
+    "unit-test": "lab test/unit -c -r console -o stdout -r lcov -o lcov.info",
     "post-deployment-test": "npm run integration-test",
     "pre-deployment-test": "npm run lint && npm run unit-test",
     "test": "npm run lint && npm run unit-test"
@@ -22,19 +22,19 @@
   },
   "homepage": "https://github.com/DEFRA/lfw-data#readme",
   "devDependencies": {
-    "code": "^5.2.0",
-    "codeclimate-test-reporter": "^0.5.0",
+    "code": "5.2.0",
+    "codeclimate-test-reporter": "0.5.0",
     "lab": "15.4.4",
     "standard": "11.0.1"
   },
   "dependencies": {
     "aws-sdk": "2.238.1",
-    "csvtojson": "^2.0.4",
-    "joi": "^13.6.0",
-    "moment": "^2.22.2",
-    "pg": "^7.4.3",
+    "csvtojson": "2.0.4",
+    "joi": "13.6.0",
+    "moment": "2.22.2",
+    "pg": "7.4.3",
     "proxy-agent": "3.0.0",
-    "serverless": "^1.30.3",
+    "serverless": "1.30.3",
     "sql": "^0.78.0",
     "xml2js": "0.4.19"
   }
