--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [      
+
     {
          "type": "node",
          "request": "launch",
@@ -63,6 +64,19 @@
             "local",
             "-f",
             "fwisProcess",
+            "--path",
+            "./test/events/fwisEvent.json"
+        ]
+    }, {
+        "type": "node",
+        "request": "launch",
+        "name": "run rloiRefresh function",
+        "program": "/home/tedd/.nvm/versions/node/v8.11.1/bin/sls",
+        "args": [
+            "invoke",
+            "local",
+            "-f",
+            "rloiRefresh",
             "--path",
             "./test/events/fwisEvent.json"
         ]
