--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "aws-sdk": "2.238.1",
     "csvtojson": "2.0.4",
     "joi": "13.6.0",
-    "moment-timezone": "^0.5.21",
+    "moment-timezone": "0.5.21",
     "pg": "7.4.3",
     "proxy-agent": "3.0.0",
     "serverless": "1.30.3",
-    "sql": "^0.78.0",
+    "sinon": "6.3.5",
+    "sql": "0.78.0",
     "xml2js": "0.4.19"
   }
 }
