--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "homepage": "https://github.com/DEFRA/lfw-data#readme",
   "devDependencies": {
-    "code": "5.2.4",
+    "@hapi/code": "^7.0.0",
+    "@hapi/lab": "^21.0.0",
     "codeclimate-test-reporter": "0.5.1",
-    "lab": "18.0.1",
     "standard": "12.0.1"
   },
   "dependencies": {
