--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "standard": "14.3.1"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "aws-sdk": "2.578.0",
     "csvtojson": "2.0.10",
-    "joi": "14.3.1",
     "moment-timezone": "0.5.27",
     "pg": "7.14.0",
     "proxy-agent": "3.1.1",
