--- a/package.json
+++ b/package.json
@@ -25,21 +25,23 @@
   },
   "homepage": "https://github.com/DEFRA/lfw-data#readme",
   "devDependencies": {
-    "@hapi/code": "^7.0.0",
-    "@hapi/lab": "^21.0.0",
+    "@hapi/code": "^8.0.1",
+    "@hapi/lab": "^22.0.4",
     "codeclimate-test-reporter": "0.5.1",
-    "standard": "14.3.1"
+    "serverless-layers": "^1.5.0",
+    "standard": "14.3.3"
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.7",
-    "aws-sdk": "2.578.0",
+    "@hapi/joi": "^17.1.1",
+    "@hapi/wreck": "^17.0.0",
+    "aws-sdk": "2.649.0",
     "csvtojson": "2.0.10",
-    "moment-timezone": "0.5.27",
-    "pg": "7.14.0",
+    "moment-timezone": "0.5.28",
+    "pg": "8.0.0",
     "proxy-agent": "3.1.1",
-    "serverless": "1.58.0",
-    "sinon": "7.5.0",
+    "serverless": "1.67.0",
+    "sinon": "9.0.1",
     "sql": "0.78.0",
-    "xml2js": "0.4.22"
+    "xml2js": "0.4.23"
   }
 }
