--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@hapi/wreck": "^17.1.0",
-    "aws-sdk": "2.808.0",
+    "async-retry": "^1.3.1",
+    "aws-sdk": "2.809.0",
     "csvtojson": "2.0.10",
     "moment-timezone": "0.5.32",
     "pg": "8.5.1",
     "proxy-agent": "4.0.0",
-    "serverless-postgres": "^1.8.0",
     "sql": "0.78.0",
     "xml2js": "0.4.23"
   }
